wrapping the correct tags

--- a/fundamentos_react/src/components/Tweet.module.css
+++ b/fundamentos_react/src/components/Tweet.module.css
@@ -17,7 +17,7 @@
 
 .user{
     grid-area: user;
-
+    display: flex;  
 }
 
 .userName{
